# Ticket_API_Rust_Async_REST_example

./: Cargo.toml  LICENSE  README.md
docs/: learning_notebook.md
docs/assets/: architecture_diagram.excalidraw  architecture_diagram.mmd
src/: data.rs  handlers.rs  lib.rs  main.rs  store.rs
